test ci with db

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -7,8 +7,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
+    runs-on: ubuntu-latest
+    environment: ci
 
+    strategy:
+      matrix:
+        node-version: [ 22.x ]
+
+    services:
+      postgres:
+        image: postgres:18-alpine
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_pass
+          POSTGRES_DB: test_db
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
+    steps:
+      - run: npm ci
+      - run: npm run lint
+      - run: npm run test
+
+  build:
     runs-on: ubuntu-latest
     environment: ci
 
@@ -24,6 +47,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run lint
-    - run: npm run test
     - run: npm run build
