--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -2,7 +2,7 @@ name: Default CI
 
 on:
   push:
-    branches: [ "main", "feat/ci" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
