--- a/package.json
+++ b/package.json
@@ -53,19 +53,19 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/browser-playwright": "^4.0.4",
+    "@vitest/coverage-v8": "^4.0.4",
     "eslint": "^9.26.0",
     "eslint-plugin-storybook": "^10.0.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.5.3",
     "storybook": "^10.0.0",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^4.0.4",
-    "playwright": "^1.56.1",
-    "@vitest/browser-playwright": "^4.0.4",
-    "@vitest/coverage-v8": "^4.0.4"
+    "vitest": "^4.0.4"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
@@ -78,7 +78,11 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@codegouvfr/react-dsfr": "^1.28.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@inertiajs/react": "^2.2.10",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@tailwindcss/vite": "^4.1.16",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
