changed CI database parameters

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -27,11 +27,11 @@ jobs:
 
     services:
       postgres:
-        image: postgres:18-alpine
+        image: postgres:16.9-alpine
         env:
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_pass
-          POSTGRES_DB: test_db
+          POSTGRES_USER: ${{ vars.DB_USER }}
+          POSTGRES_PASSWORD: ${{ vars.DB_PASSWORD }}
+          POSTGRES_DB: ${{ vars.DB_DATABASE }}
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
