--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "edge.js": "^6.2.1",
     "lodash-es": "^4.17.21",
     "luxon": "^3.7.2",
+    "maplibre-gl": "5.11.0",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
