Add support for custom tag colors in CustomTag component

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/tinycolor2": "^1.4.6",
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/browser-playwright": "^4.0.4",
     "@vitest/coverage-v8": "^4.0.4",
@@ -90,7 +91,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "reflect-metadata": "^0.2.2",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "tinycolor2": "^1.6.0"
   },
   "hotHook": {
     "boundaries": [
