--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "npx react-dsfr update-icons && node bin/server.js",
-    "build": "node ace build",
+    "start": "cd build && node bin/server.js",
+    "build": "node ace build && cd build && npm ci --omit='dev'",
     "dev": "npx react-dsfr update-icons && node ace serve --hmr",
     "test": "node ace test",
     "lint": "eslint .",
