--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "luxon": "^3.7.2",
     "maplibre-gl": "5.11.0",
     "pg": "^8.16.3",
+    "pmtiles": "^4.3.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
