--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-toastify": "^11.0.5",
     "reflect-metadata": "^0.2.2",
     "tailwindcss": "^4.1.16",
     "tinycolor2": "^1.6.0",
