Changement de méthode de seeding des utilisateurs pour le test du MVP.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ DB_DATABASE=vizeau
 ADMIN_EMAIL=dev@livingdata.co
 ADMIN_PASSWORD=secret
 PMTILES_URL=
+USERS_TO_SEED='[{"fullName":"Pierre Dupont","email":"beta@livingdata.co","password":"password"}]'
