Back-end de la création et upload de document lié aux entrées de journal

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ ADMIN_EMAIL=dev@livingdata.co
 ADMIN_PASSWORD=secret
 PMTILES_URL=
 USERS_TO_SEED='[{"fullName":"Pierre Dupont","email":"beta@livingdata.co","password":"password"}]'
+DRIVE_DISK=spaces
+SPACES_KEY=
+SPACES_SECRET=
+SPACES_REGION=fr-par
+SPACES_BUCKET=
+SPACES_ENDPOINT=https://s3.${SPACES_REGION}.scw.cloud/
