--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
+    "@poppinss/file-generator": "^2.1.6",
     "@storybook/addon-a11y": "^10.0.0",
     "@storybook/addon-docs": "^10.0.0",
     "@storybook/addon-onboarding": "^10.0.0",
@@ -73,12 +74,15 @@
     "@adonisjs/auth": "^9.4.0",
     "@adonisjs/core": "^6.20.0",
     "@adonisjs/cors": "^2.2.1",
+    "@adonisjs/drive": "^3.4.1",
     "@adonisjs/inertia": "^3.1.1",
     "@adonisjs/lucid": "^21.8.2",
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@aws-sdk/client-s3": "^3.985.0",
+    "@aws-sdk/s3-request-presigner": "^3.985.0",
     "@codegouvfr/react-dsfr": "^1.28.0",
     "@inertiajs/react": "^2.2.10",
     "@tailwindcss/vite": "^4.1.16",
